# vectorlib

./: Makefile  dev_requirements.txt  pyproject.toml  vectorlib.py
.github/workflows/: test.yml
src/vectorlib/: __init__.py  vectorlib.py
test/: test_addition.py  test_cross_product.py  test_distance.py  test_get_setitem.py  test_misc.py  test_multiplication.py  test_pos_neg.py  test_scalar.py  test_subtraction.py
